[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/PixelAE-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Splash/Splash Screen/logo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/Menu/Menu/Buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Menu/Menu/Buttons/StartButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/Menu/Menu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/Menu/fade_in/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
startscenepath = "res://Scenes/Levels/World.tscn"
tutorialscenepath = "res://Scenes/Levels/World.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_right = 360.0
margin_bottom = 1080.0
alignment = 1

[node name="Start_Button" parent="MainMenu/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 296.0
margin_right = 360.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 2 )

[node name="Tutorial_Button" parent="MainMenu/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 419.0
margin_right = 360.0
margin_bottom = 538.0
custom_fonts/font = SubResource( 2 )
text = "Tutorial"

[node name="Options_Button" parent="MainMenu/HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_top = 542.0
margin_right = 360.0
margin_bottom = 661.0
custom_fonts/font = SubResource( 2 )
scene_to_load = "res://Scenes/UI/Menu/Menu/Options.tscn"

[node name="Quit_Button" parent="MainMenu/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 665.0
margin_right = 360.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Sprite" type="Sprite" parent="MainMenu"]
position = Vector2( 1344, 296 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MainMenu"]
margin_left = 936.0
margin_top = 560.0
margin_right = 1746.0
margin_bottom = 863.0
rect_pivot_offset = Vector2( 400, 144 )
custom_fonts/font = SubResource( 1 )
text = "A Game Where
You Fight People"
align = 1
valign = 1

[connection signal="button_down" from="MainMenu/HBoxContainer/VBoxContainer2/Start_Button" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/VBoxContainer2/Start_Button" to="." method="_on_Start_Button_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/VBoxContainer2/Tutorial_Button" to="." method="_on_Tutorial_Button_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/VBoxContainer2/Options_Button" to="." method="_on_Options_Button_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/VBoxContainer2/Quit_Button" to="." method="_on_Quit_Button_button_down"]
